--- a/PresentazioneLab.qmd
+++ b/PresentazioneLab.qmd
@@ -43,6 +43,8 @@ format:
     # chalkboard: true
 ---
 
+# INTRO
+
 ## Our team
 
 :::{.columns}
@@ -181,7 +183,7 @@ PostDoc
 :::{.name}
 Vishnuvardhan Shakthibala
 :::
-Research Fellow
+Researcher
 :::
 ::::
 
@@ -201,50 +203,12 @@ Research Fellow
 
 
 
-## Timeline
-
-
-
-:::{.timeline}
-
-:::{.item style="width: 20%"}
-:::{.text}
-Content
-:::
-
-:::{.arrow style="background-color: var(--primary-color);"}
-2012 
-:::
-
-:::
-
-:::{.item style="width: 20%"}
-:::{.text}
-Content 2
-:::
-
-:::{.arrow style="background-color: var(--secondary-color);"}
-2013 
-:::
-
-:::
-
-
-::: 
-<!-- timeline end -->
 
 
 
 ## 20+ years of expertise in the field
 
 ### Knowledge on vehicle dynamics, Optimal Control and Intelligent Vehicles - 120M€ and 100 partners
-
-
-
-
-
-
-
 
 :::{.timeline}
 
@@ -342,3 +306,83 @@ Content 2
 
 ::: 
 <!-- timeline end -->
+
+## SIMULATOR Infrastructure
+
+<!-- image of simulator setup -->
+![](./data/projects/simsetup.png)
+
+# RESEARCH ACTIVITY 
+<!-- {background-color="#222222" background-image="data/PictureRA.jpg" backgrounds-width="50%"} -->
+
+<!-- ![](data/PictureRA.jpg) -->
+<!-- {background-image="data/PictureRA.jpg" background-size="80%" background-repeat="no-repeat" background-position-x="100%" background-position-y="50%"} -->
+
+## Modeling Dynamic Systems and complex physical interactions
+
+![](./data/projects/modeling.png)
+
+## CO-DRIVER DREAMS4CARS – 5M € and 6 industrial partners 
+
+{{< video https://www.youtube.com/embed/ODuw9TNanE8?si=PUNyt1sNF_VmFIoM&amp;start=6 width="100%" height="85%" autoplay="true" loop="true" muted="true">}}
+
+## Vedi2025 – Hybrid motion planner cooperative intersection {.center}
+
+:::{.columns}
+::::{.column width="58%"}
+```{=html}
+<!-- add video -->
+<div style="display: flex; justify-content: center; padding: 0px;">
+  <video width="100%" height="100%" autoplay loop muted controls padding="0px">
+    <source src="data/Vedi2025CrossEgo00.mp4" type="video/mp4">
+  </video>
+</div>
+```
+::::
+::::{.column width="42%"}
+```{=html}
+<!-- add video -->
+<div style="display: flex; justify-content: center; padding: 0px;">
+  <video width="100%" height="100%" autoplay loop muted controls padding="0px">
+    <source src="data/Vedi2025CrossEgo01.mp4" type="video/mp4">
+  </video>
+</div>
+```
+::::
+:::
+
+## MPTree race
+```{=html}
+<!-- add video -->
+<div style="display: flex; justify-content: center;">
+  <video width="100%" height="100%" autoplay loop muted controls>
+    <source src="data/picci.mp4" type="video/mp4">
+  </video>
+</div>
+```
+
+## Vehicle max performance Learning Vehicle Dynamics - simulation 
+<!-- Simulator -->
+{{< video https://www.youtube.com/embed/h5eW01xXWaw?si=50-4H87BTEMB67ql&amp;start=25 width="100%" height="85%" autoplay="true" loop="true" muted="true">}}
+
+## Vehicle max performance Learning Vehicle Dynamics – scale vehicles
+<!-- Rumby -->
+{{< video https://www.youtube.com/embed/HADLEr5eTj0?si=lm8HhUpFJXM8KjfI&amp;start=25 width="100%" height="85%" autoplay="true" loop="true" muted="true">}}
+
+## Vehicle max performance Learning Vehicle Dynamics – adaptations
+{{< video https://www.youtube.com/embed/xQ_T96IjGP8?si=w0eF2kz1KAq1Rk2t&amp;start=61 width="100%" height="85%" autoplay="true" loop="true" muted="true">}}
+
+## Autonomous parking
+{{< video https://www.youtube.com/embed/U2mRTzmFj9w?si=iSzRqT9rY2LIslgA&amp;start=29 width="100%" height="85%" autoplay="true" loop="true" muted="true" justify-content="center" align-items="center">}}
+
+
+## {background-video="data/end.mov" background-video-loop="true" background-video-muted="true" background-video-autoplay="true" }
+
+<!-- background-color="#222222" -->
+
+
+::: {.tbbox style="text-align: center;" }
+<!-- #### Q & A -->
+##### Thank you for your attention
+:::
+
