--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ slide-level: 2
 format:
   revealjs: 
     # Output file
-    output-file: index.html
+    # output-file: index.html
     # Table of Contents
     # toc: true
     # toc_float: true
